--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "scripts": {
     "autoprefixer": "postcss --use autoprefixer -r --no-map ./public/dist/css/main.css",
-    "browsersync": "browser-sync start --no-open --reload-delay 1000 --reload-debounce --proxy $npm_package_config_proxy --files './public/dist/css/main.css' './public/dist/js/main.js' './views/**.*.pug'",
+    "browsersync": "browser-sync start --no-open --reload-delay 1000 --reload-debounce --proxy $npm_package_config_proxy --files './public/dist/css/main.css' './public/dist/js/main.js' './views/**/.*.pug'",
     "build:css": "node-sass -o ./public/dist/css/ ./public/src/scss/main.scss && npm run autoprefixer",
     "build:js": "webpack -p --config webpack.config.js",
     "clean:css": "cleancss --compatibility ie9 -o ./public/dist/css/main.min.css ./public/dist/css/main.css",
@@ -37,6 +37,7 @@
     "eslint-config-airbnb-base": "^11.1.3",
     "eslint-plugin-import": "^2.2.0",
     "express": "~4.15.2",
+    "handlebars": "^4.0.8",
     "jquery": "^3.2.1",
     "morgan": "~1.8.1",
     "node-sass": "^4.5.1",
