--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "autoprefixer": "postcss --use autoprefixer -r --no-map ./public/dist/css/main.css",
     "browsersync": "browser-sync start --no-open --reload-delay 1000 --reload-debounce --proxy $npm_package_config_proxy --files './public/dist/css/main.css' './public/dist/js/main.js' './views/**/.*.pug'",
     "build:css": "node-sass -o ./public/dist/css/ ./public/src/scss/main.scss && npm run autoprefixer",
-    "build:js": "webpack -p --config webpack.config.js",
+    "transpile:js": "./node_modules/.bin/babel ./public/src/js --out-file ./public/dist/js/bundle.js --presets=env",
+    "build:js": "npm run transpile:js && npm run minify:js",
+    "minify:js": "uglifyjs ./public/dist/js/bundle.js -o ./public/dist/js/bundle.min.js -c -m --source-map \"filename='bundle.min.js.map'\"",
     "clean:css": "cleancss --compatibility ie9 -o ./public/dist/css/main.min.css ./public/dist/css/main.css",
     "dev": "environment=dev npm run firstrun & npm run start & npm run watch:all & npm run browsersync",
     "dist": "environment=dist npm run build:js && npm run build:css && npm run autoprefixer && npm run mqpacker && npm run clean:css",
@@ -21,39 +23,33 @@
     "watch:js": "onchange './public/src/js/*' -- npm run build:js"
   },
   "dependencies": {
-    "autoprefixer": "^6.7.7",
-    "babel-core": "^6.24.0",
-    "babel-eslint": "^6.1.2",
-    "babel-loader": "^6.4.1",
-    "babel-preset-latest": "^6.24.0",
-    "babel-preset-stage-3": "^6.24.1",
-    "body-parser": "~1.17.1",
-    "browser-sync": "^2.18.8",
-    "clean-css-cli": "^4.0.12",
+    "body-parser": "~1.18.2",
     "cookie-parser": "~1.4.3",
-    "css-mqpacker": "^5.0.1",
-    "debug": "~2.6.3",
-    "eslint": "^3.19.0",
-    "eslint-config-airbnb-base": "^11.1.3",
-    "eslint-plugin-import": "^2.2.0",
-    "express": "~4.15.2",
+    "css-mqpacker": "^6.0.2",
+    "debug": "~3.1.0",
+    "express": "~4.16.3",
     "handlebars": "^4.0.8",
     "jquery": "^3.2.1",
-    "morgan": "~1.8.1",
+    "morgan": "~1.9.0",
     "node-sass": "^4.5.1",
     "npm-run-all": "^4.0.2",
-    "onchange": "^3.2.1",
     "path": "^0.12.7",
-    "postcss": "^5.2.16",
-    "postcss-cli": "^3.0.0",
     "pug": "~2.0.0-beta11",
-    "serve-favicon": "~2.4.2",
-    "stylelint": "^7.10.1",
-    "stylelint-order": "^0.4.3",
-    "unminified-webpack-plugin": "^1.2.0",
-    "webpack": "^2.3.2"
+    "serve-favicon": "~2.4.2"
   },
   "devDependencies": {
-    "nodemon": "^1.11.0"
+    "autoprefixer": "^8.2.0",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.24.0",
+    "babel-preset-env": "^1.6.1",
+    "browser-sync": "^2.18.8",
+    "clean-css-cli": "^4.0.12",
+    "nodemon": "^1.11.0",
+    "onchange": "^3.2.1",
+    "postcss": "^6.0.21",
+    "postcss-cli": "^5.0.0",
+    "stylelint": "^9.1.3",
+    "stylelint-order": "^0.8.1",
+    "uglify-js": "^3.3.16"
   }
 }
