--- a/.stylelintrc
+++ b/.stylelintrc
@@ -92,11 +92,10 @@
     "selector-max-empty-lines": 0,
     "selector-max-compound-selectors": 3,
     "selector-max-specificity": "0,2,0",
-    "selector-no-attribute": true,
-    "selector-no-id": true,
+    "selector-max-id": 0,
     "selector-no-qualifying-type": true,
-    "selector-no-type": true,
-    "selector-no-universal": true,
+    "selector-max-type": 0,
+    "selector-max-universal": 0,
     "selector-no-vendor-prefix": true,
     "selector-pseudo-class-case": "lower",
     "selector-pseudo-class-no-unknown": true,
