--- a/package.json
+++ b/package.json
@@ -34,8 +34,7 @@
     "node-sass": "^4.5.1",
     "npm-run-all": "^4.0.2",
     "path": "^0.12.7",
-    "pug": "~2.0.0-beta11",
-    "serve-favicon": "~2.4.2"
+    "pug": "~2.0.0-beta11"
   },
   "devDependencies": {
     "autoprefixer": "^8.2.0",
